--- a/data/cities/paris/biocoop-11.yml
+++ b/data/cities/paris/biocoop-11.yml
@@ -6,6 +6,6 @@ postcode: "75001"
 city: Paris
 street: "Rue de Turbigo"
 housenumber: 15
-phone: "09 72 14 79 40"
+phone: "+33 9 72 14 79 40"
 opening_hours: "Mo-Sa 10:00-20:00; Su 10:00-13:00"
 website: "https://www.biocoop.fr/magasins-bio/Trouver-mon-magasin-Biocoop/Ile-de-France/Paris/BIOCOOP-ETIENNE-MARCEL"
