--- a/data/cities/issy-les-moulineaux/la-boulangerie-bio.yml
+++ b/data/cities/issy-les-moulineaux/la-boulangerie-bio.yml
@@ -6,6 +6,6 @@ postcode: "92130"
 city: Issy-les-Moulineaux
 street: "Rue Aristide Briand"
 housenumber: 5
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33 1 41 90 05 86"
+opening_hours: "Mo-Sa 07:00-20:00"
+website: "https://www.laboulangeriebio.com/"
