--- a/data/cities/meudon/la-boulangerie-bio-selon-meudon.yml
+++ b/data/cities/meudon/la-boulangerie-bio-selon-meudon.yml
@@ -7,5 +7,5 @@ city: Meudon
 street: Place Simone Veil
 housenumber: "3"
 phone: ""
-opening_hours: Mo-Sa 07:00-20:00
+opening_hours: Mo-Sa 07:00-20:00; Su 08:00-13:30
 website: ""
